# yarp_thrift

./: .gitmodules  CMakeLists.txt  README.md
compiler/: CMakeLists.txt
compiler/inserts/: t_yarp_generator.cc
demo/: CMakeLists.txt  demo.cpp  demo.thrift  demo_motor.cpp  motor.thrift  motor_client.cpp  motor_server.cpp  world.thrift  world_client.cpp
tests/: CMakeLists.txt  harness.cmake
tests/minimal/: test.thrift
yarp/include/yarp/os/: Wire.h
yarp/src/: Wire.cpp
